<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"

    android:layout_weight="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        >
        <EditText
            android:id="@+id/ed1"
            android:labelFor="@+id/ed1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/_0"
            android:textSize="40sp"
            android:gravity="end|bottom"
            android:autofillHints=""
            android:inputType="numberDecimal">

        </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="vertical"
        android:gravity="center"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <Button
                android:id="@+id/b1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1"
                style="?android:attr/buttonBarButtonStyle"
                android:backgroundTint="@color/skyBlue"
                android:onClick="numberEvent">
            </Button>
            <Button
                android:id="@+id/b2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2"
                android:backgroundTint="@color/skyBlue"
                style="?android:attr/buttonBarButtonStyle"
                android:onClick="numberEvent">
            </Button>
            <Button
                android:id="@+id/b3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_3"
                android:backgroundTint="@color/skyBlue"
                style="?android:attr/buttonBarButtonStyle"
                android:onClick="numberEvent">
            </Button>
            <Button
                android:id="@+id/bplus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plus"
                android:backgroundTint="@color/skyBlue"
                style="?android:attr/buttonBarButtonStyle"
                android:onClick="numberEvent">
            </Button>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            >
            <Button
                android:id="@+id/b4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_4"
                android:backgroundTint="@color/skyBlue"
                style="?android:attr/buttonBarButtonStyle"
                android:onClick="numberEvent">
            </Button>
            <Button
                android:id="@+id/b5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_5"
                android:backgroundTint="@color/skyBlue"
                style="?android:attr/buttonBarButtonStyle"
                android:onClick="numberEvent">
            </Button>
            <Button
                android:id="@+id/b6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_6"
                android:backgroundTint="@color/skyBlue"
                style="?android:attr/buttonBarButtonStyle"
                android:onClick="numberEvent">
            </Button>
            <Button
                android:id="@+id/bMinus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minus"
                android:backgroundTint="@color/skyBlue"
                style="?android:attr/buttonBarButtonStyle"
                android:onClick="numberEvent">
            </Button>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
           >
            <Button
                android:id="@+id/b7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_7"
                android:backgroundTint="@color/skyBlue"
                style="?android:attr/buttonBarButtonStyle"
                android:onClick="numberEvent">
            </Button>
            <Button
                android:id="@+id/b8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_8"
                android:backgroundTint="@color/skyBlue"
                style="?android:attr/buttonBarButtonStyle"
                android:onClick="numberEvent">
            </Button>
            <Button
                android:id="@+id/b9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_9"
                android:backgroundTint="@color/skyBlue"
                style="?android:attr/buttonBarButtonStyle"
                android:onClick="numberEvent">
            </Button>
            <Button
                android:id="@+id/bMultiply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/times"
                android:backgroundTint="@color/skyBlue"
                style="?android:attr/buttonBarButtonStyle"
                android:onClick="numberEvent">
            </Button>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            >
            <Button
                android:id="@+id/bClear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear"
                android:backgroundTint="@color/skyBlue"
                style="?android:attr/buttonBarButtonStyle"
                android:onClick="numberEvent">
            </Button>
            <Button
                android:id="@+id/b0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:backgroundTint="@color/skyBlue"
                style="?android:attr/buttonBarButtonStyle"
                android:onClick="numberEvent">
            </Button>
            <Button
                android:id="@+id/bEqual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/equal"
                android:backgroundTint="@color/skyBlue"
                style="?android:attr/buttonBarButtonStyle"
                android:onClick="eqEvent">
            </Button>
            <Button
                android:id="@+id/bDivide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/div"
                android:backgroundTint="@color/skyBlue"
                style="?android:attr/buttonBarButtonStyle"
                android:onClick="numberEvent">
            </Button>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <Button
                android:id="@+id/bAdvanced"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/advanced_with_history"
                android:backgroundTint="@color/skyBlue"
                android:onClick="advanceClick">
            </Button>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="6"
        >
        <TextView
            android:id="@+id/textV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="30sp">

        </TextView>

    </LinearLayout>


</LinearLayout>